# EngineProject

./: .gitignore  CMakeLists.txt  EngineProject.sln  EngineProject.vcxproj  README.md  Realtime2Devlog.txt  build.bat  build.sh
ext/: CMakeLists.txt
levels/: demo.txt  demo2.txt
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Level.cpp  Level.h  NodeBuilder.cpp  NodeBuilder.h  NodeTraverser.cpp  NodeTraverser.h  Utils.cpp  Utils.h  datastructs.h  doomstructs.h  inputflags.h  levelcomponents.cpp  levelcomponents.h  main.cpp
